--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "@filipigustavo/enc-dec",
   "version": "0.1.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/filipigustavo/enc-dec"
+  },
+  "homepage": "https://github.com/filipigustavo/enc-dec",
+  "keywords": ["react", "encrypt", "decrypt", "hash", "hook"],
+  "license": "MIT",
+  "author": {
+    "name": "Filipi Gustavo Boltão Silva",
+    "email": "email+npm@filipigustavo.com.br",
+    "url": "https://linkedin.com/in/filipigustavo/"
+  },
   "private": false,
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
@@ -56,6 +68,10 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
+  },
+  "peerDependencies": {
+    "react": "^18.x",
+    "react-dom": "^18.x"
   },
   "main": "build/index.js",
   "module": "build/index.es.js",
