--- a/package.json
+++ b/package.json
@@ -20,12 +20,6 @@
     "url": "https://linkedin.com/in/filipigustavo/"
   },
   "private": false,
-  "dependencies": {
-    "@faker-js/faker": "^7.5.0",
-    "crypto-js": "^4.1.1",
-    "lodash": "^4.17.21",
-    "uuid": "^8.3.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -52,12 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "node-sass": "^7.0.3",
-    "rollup": "^2.79.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.34.1",
+    "@rollup/plugin-terser": "^0.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -68,11 +60,18 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
+    "crypto-js": "^4.1.1",
+    "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "rollup": "^2.79.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "peerDependencies": {
