--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.5.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
@@ -62,6 +61,7 @@
     "@types/uuid": "^8.3.4",
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
+    "lorem-ipsum": "^2.0.8",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
