--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "private": false,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "pack": "rm -rf build/ && rollup -c",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -61,6 +61,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^5.0.1",
     "crypto-js": "^4.2.0",
     "gh-pages": "^6.3.0",
     "lodash": "^4.17.21",
@@ -68,12 +69,12 @@
     "node-polyfill-webpack-plugin": "^4.1.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-scripts": "5.0.1",
     "rollup": "^4.46.3",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.9.2",
     "uuid": "^11.1.0",
+    "vite": "^7.1.3",
     "web-vitals": "^5.1.0"
   },
   "peerDependencies": {
