--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@filipigustavo/enc-dec",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/filipigustavo/enc-dec"
+    "url": "git+https://github.com/filipigustavo/enc-dec.git"
   },
   "homepage": "https://filipigustavo.github.io/enc-dec",
   "keywords": [
