--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "web-vitals": "^5.1.0"
   },
   "peerDependencies": {
-    "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "react": "^19.x",
+    "react-dom": "^19.x"
   },
   "main": "build/index.js",
   "module": "build/index.es.js",
