--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@filipigustavo/enc-dec",
-  "version": "2.0.2",
+  "name": "@filipigustavo/react-enc-dec",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/filipigustavo/enc-dec.git"
+    "url": "git+https://github.com/filipigustavo/react-enc-dec.git"
   },
-  "homepage": "https://filipigustavo.github.io/enc-dec",
+  "homepage": "https://filipigustavo.github.io/react-enc-dec",
   "keywords": [
     "react",
     "encrypt",
